family photo added

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                         <div data-category="graduation"><img src="images/graduation/graduation-5.jpg"></div>
                         <div data-category="graduation"><img src="images/graduation/graduation-6.jpg"></div>
                         <div data-category="graduation"><img src="images/graduation/graduation-7.jpg"></div>
+                        <div data-category="graduation"><img src="images/graduation/graduation-8.jpg"></div>
+                        <div data-category="graduation"><img src="images/graduation/graduation-9.jpg"></div>
+                        <div data-category="graduation"><img src="images/graduation/graduation-10.jpg"></div>
                     </div>
 
                     <!-- <div class="portfolio-grid grid">
@@ -182,6 +185,20 @@
                         <div data-category="portrait"><img src="images/portrait/portrait-9.jpg"></div>
                         <div data-category="portrait"><img src="images/portrait/portrait-10.jpg"></div>
                     </div> -->
+
+                    <div class="portfolio-grid grid">
+                        <!-- Add data-category attribute to each image -->
+                        <div data-category="family"><img src="images/family/family-1.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-2.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-3.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-4.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-5.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-6.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-7.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-8.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-9.jpg"></div>
+                        <div data-category="family"><img src="images/family/family-10.jpg"></div>
+                    </div>
 
                     <div class="portfolio-grid grid">
                         <!-- Add data-category attribute to each image -->
