nav button effect

--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
                     </div>
 
                      <!-- Category bar -->
-                    <div class="grid portfolio-nav">
-                        <button class="category-button active" data-category="graduation">Graduation</button>
-                        <button class="category-button" data-category="portrait">Portrait</button>
-                        <button class="category-button" data-category="family">Family</button>
-                        <button class="category-button" data-category="pet">Pet</button>
-                        <button class="category-button" data-category="event">Food</button>
-                        <button class="category-button" data-category="wedding">Wedding</button>
-                        <button class="category-button" data-category="realestate">Real Estate</button>
-                        <button class="category-button" data-category="landscape">Landscape</button>
+                    <div class="portfolio-nav grid">
+                        <button class="category-button active" data-category="graduation"><p>Graduation</p></button>
+                        <button class="category-button" data-category="portrait"><p>Portrait</p></button>
+                        <button class="category-button" data-category="family"><p>Family</p></button>
+                        <button class="category-button" data-category="pet"><p>Pet</p></button>
+                        <button class="category-button" data-category="event"><p>Food</p></button>
+                        <button class="category-button" data-category="wedding"><p>Wedding</p></button>
+                        <button class="category-button" data-category="realestate"><p>Real Estate</p></button>
+                        <button class="category-button" data-category="landscape"><p>Landscape</p></button>
                     </div>
 
                     <div class="portfolio-grid grid">
@@ -187,7 +187,6 @@
                     </div> -->
 
                     <div class="portfolio-grid grid">
-                        <!-- Add data-category attribute to each image -->
                         <div data-category="family"><img src="images/family/family-1.jpg"></div>
                         <div data-category="family"><img src="images/family/family-2.jpg"></div>
                         <div data-category="family"><img src="images/family/family-3.jpg"></div>
@@ -201,7 +200,6 @@
                     </div>
 
                     <div class="portfolio-grid grid">
-                        <!-- Add data-category attribute to each image -->
                         <div data-category="landscape"><img src="images/landscape/landscape-1.jpg"></div>
                         <div data-category="landscape"><img src="images/landscape/landscape-2.jpg"></div>
                         <div data-category="landscape"><img src="images/landscape/landscape-3.jpg"></div>
