email click to open default email

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
                             <i class = "fas fa-chevron-down"></i>
                         </a>
                     </div>
-                    <p class = "lead"><i class = "fas fa-phone-alt"></i> +61 0452150286</p>
-                    <p class = "lead"><i class = "fas fa-envelope"></i> yetianhaowork@gmail.com</p>
+                    <p class = "lead"><i class = "fas fa-phone-alt"></i> 0452150286</p>
+                    <p class="lead"><i class="fas fa-envelope"></i> <a href="mailto:yetianhaowork@gmail.com"> yetianhaowork@gmail.com</a></p>
                     <p class = "lead jump-link"><i class="fa-brands fa-weixin"></i> cc_is_th</p>
                     <form action="">
                         <input type = "text" class = "form-control" placeholder="Your name here ...">
