portrait photoes added

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <div data-category="graduation"><img src="images/graduation/graduation-10.jpg"></div>
                     </div>
 
-                    <!-- <div class="portfolio-grid grid">
+                    <div class="portfolio-grid grid">
                         <div data-category="portrait"><img src="images/portrait/portrait-1.jpg"></div>
                         <div data-category="portrait"><img src="images/portrait/portrait-2.jpg"></div>
                         <div data-category="portrait"><img src="images/portrait/portrait-3.jpg"></div>
@@ -182,8 +182,7 @@
                         <div data-category="portrait"><img src="images/portrait/portrait-7.jpg"></div>
                         <div data-category="portrait"><img src="images/portrait/portrait-8.jpg"></div>
                         <div data-category="portrait"><img src="images/portrait/portrait-9.jpg"></div>
-                        <div data-category="portrait"><img src="images/portrait/portrait-10.jpg"></div>
-                    </div> -->
+                    </div>
 
                     <div class="portfolio-grid grid">
                         <div data-category="family"><img src="images/family/family-1.jpg"></div>
