rename dir Portrait to portrait

--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
                         <div data-category="landscape"><img src="images/landscape/landscape-7.jpg"></div>
                     </div>
 
+                    <!-- <div class="portfolio-grid grid">
+                        <div data-category="pet"><img src="images/pet/pet-1.jpg"></div>
+                        <div data-category="pet"><img src="images/pet/pet-2.jpg"></div>
+                        <div data-category="pet"><img src="images/pet/pet-3.jpg"></div>
+                        <div data-category="pet"><img src="images/pet/pet-4.jpg"></div>
+                        <div data-category="pet"><img src="images/pet/pet-5.jpg"></div>
+                        <div data-category="pet"><img src="images/pet/pet-6.jpg"></div>
+                        <div data-category="pet"><img src="images/pet/pet-7.jpg"></div>
+                    </div> -->
+
 
                     <!-- Lightbox HTML -->
                     <div id="lightbox" class="lightbox">
